# mcp_quick_start_py

src/: pyproject.toml  shared_mcp_object.py
